--- a/content/mq.css
+++ b/content/mq.css
@@ -3,9 +3,13 @@ body {
     font-family: 'Nunito', sans-serif;
     color: rgb(0, 0, 68);
     font-weight: 500;
-    display: box;
     justify-content: center;
     font-size: 1.1rem;
+}
+
+h1 {
+    font-size: 1.4rem;
+    justify-self: right;
 }
 
 .head-flex-container, .body-flex-container {
@@ -33,6 +37,10 @@ body {
 .menu-item {
     padding: 0.5rem;
     margin: 0.5rem;
+}
+
+.menu-item > a {
+    display: block;
 }
 
 .inhalt {
